--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,16 @@
 СП_2/L1/Debug/
 СП_2/L1/L1.VC.db
 СП_2/L1/.vs/L1/v14/.suo
+СП_2/L2/.vs/
+*.opendb
+*.pdb
+*.ilk
+*.db
+СП_2/L3/L3/Debug/
+*.ipch
+*.suo
+СП_2/L4/Debug/
+СП_2/L4/L4/Debug/
+*.filters
+СП_2/L2/L2/Debug/
+СП_2/L2/Debug/
