--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 *.filters
 СП_2/L2/L2/Debug/
 СП_2/L2/Debug/
+СП_2/L5/Debug/
+СП_2/L6/L6/Debug/
+СП_2/L7/Debug/
+СП_2/L7/L7/Debug/
+СП_2/L5/L5/Debug/
