--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,19 @@
 СП_2/L5/L5/Debug/
 СП_2/L8/L8/Debug/
 СП_2/L8/Debug/
+СП_3/ChildProcess/ChildProcess/Debug/
+СП_3/L5/L5/Debug/
+СП_3/L6/Debug/
+СП_3/L6/L6/Debug/
+СП_3/L5/Debug/
+СП_3/L4/L4/Debug/
+СП_3/L3/L3/Debug/
+СП_3/ParentProcess/ParentProcess/Debug/
+СП_3/L2/L2/Debug/
+СП_3/ChildProcess/Debug/
+СП_3/L1/L1/Debug/
+СП_3/L3/Debug/
+СП_3/L2/Debug/
+СП_3/L1/Debug/
+СП_3/L4/Debug/
+СП_3/ParentProcess/Debug/
